--- a/Visualizing The Gender Gap In College Degrees.ipynb
+++ b/Visualizing The Gender Gap In College Degrees.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualizing The Gender Gap In College Degrees\n",
+    "The Department of Education Statistics releases a data set annually containing the percentage of bachelor's degrees granted to women from 1970 to 2012.\n",
+    "The data set is broken up into 17 categories of degrees, with each column as a separate category.\n",
+    "Randal Olson, a data scientist at University of Pennsylvania, has cleaned the data set and made it available on his personal website.\n",
+    "Randal compiled this data set to explore the gender gap in STEM fields, which stands for science, technology, engineering, and mathematics.\n",
+    "This gap is reported on often in the news and not everyone agrees that there is a gap.\n",
+    "\n",
+    "**in this project** we will visualize the gender gap across college degrees ,\n",
+    "there are seventeen degrees that we need to generate line charts for,\n",
+    "we'll use a subplot grid layout of 6 rows by 3 columns. We can then group the degrees into STEM, liberal arts, and other"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
